# uf2loader

./: CMakeLists.txt
.github/workflows/: build.yml
common/lcdspi/: CMakeLists.txt  lcdspi.c  lcdspi.cpp  lcdspi.h
common/petit_fatfs/: diskio.c
diag/: CMakeLists.txt  diag.c
stage3/: CMakeLists.txt  stage3.c
ui/: CMakeLists.txt  config.h  key_event.c  key_event.h  main.c  text_directory_ui.c  uf2.c  ui.h
ui/lib/sdmmc/: sdmmc.c
ui/lib/usb_msc/: usb_msc.c
